# CipherDrop

./: Dockerfile  LICENSE  README.md  compose-dev.yml  compose.yml
.github/workflows/: deploy.yml  test.yml
backend/: Cargo.toml  diesel.toml  env.example
backend/migrations/2024-10-07-162906_create_s3_buckets/: down.sql  up.sql
backend/migrations/2024-10-08-154100_create_files/: down.sql  up.sql
backend/migrations/2024-10-12-214704_file_to_bucket/: down.sql  up.sql
backend/src/: actions.rs  crypt.rs  files.rs  jobs.rs  main.rs  models.rs  s3.rs  schema.rs
backend/src/database/: actions.rs  mod.rs
backend/src/routes/: download_file.rs  file_html.rs  file_info.rs  mod.rs  upload.rs
frontend/: all.css  file.css  file.html  file.js  index.css  index.html  index.js
frontend/templates/: file.html
