[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
aws-creds = "0.37"
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
rust-s3 = "0.35.1"
serde = "1.0.210"
tokio-util = "0.7.12"
uuid = { version = "1.10.0", features = ["v4"] }
