[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
aws-creds = "0.37"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool = "0.12.1"
diesel = { version = "2.2.4", features = ["chrono", "uuid"] }
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
lazy_static = "1.5.0"
rand = "0.8.5"
rust-s3 = "0.35.1"
serde = "1.0.210"
tera = "1.20.0"
tokio-util = "0.7.12"
uuid = { version = "1.10.0", features = ["v4"] }
